Add add post, show post and edit post behavior

--- a/client/coolProject/src/app/app.component.html
+++ b/client/coolProject/src/app/app.component.html
@@ -1,9 +1,6 @@
 <div class="container-fluid mx-5">
   <div class="row">
-    <div class="col-xs-12">
-      <h1>Hello World!</h1>
-    </div>
-    <div class="col-12 mx-5">
+    <div class="app-content col-12 mx-5">
       <router-outlet></router-outlet>
     </div>
   </div>
