--- a/client/coolProject/src/app/add-post/add-post.component.html
+++ b/client/coolProject/src/app/add-post/add-post.component.html
@@ -1,33 +1,43 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" #closeBtn class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+<header class="header clearfix">
+    <nav>
+        <ul class="nav nav-pills float-right">
+            <div class="general_menu">
+                <h3 class="text-muted">Your movies blog</h3>
+                <li class="nav-item">
+                    <a routerLink="/home" class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
             </div>
-            <div class="modal-body">
- 
- 
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Title</label>
-                        <input name="title" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter title">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Description</label>
-                        <textarea name="description" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                        </textarea>
-                    </div>
- 
-                    
- 
-                    <button type="button" class="btn btn-primary">Add</button>
-                </form>
- 
- 
+            <div class="user_menu">
+                <li class="nav-item">
+                    <a routerLink="/new/review" class="nav-link" href="#">Ajouter une review</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/user/reviews" class="nav-link" href="#">Gérer mes reviews</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Logout</a>
+                </li>
             </div>
-        </div>
+        </ul>
+    </nav>
+</header>
+
+<h1>Ecrivez votre review</h1>
+
+<form>
+    <div class="form-group">
+        <label for="titleReview">Title</label>
+        <input name="title" type="text" [(ngModel)]="post.title" class="form-control" id="titleReview" aria-describedby="emailHelp" placeholder="Titre de votre review">
     </div>
-</div>
+    <div class="form-group">
+        <label for="contentReview">Votre review</label>
+        <textarea name="content" [(ngModel)]="post.content" class="form-control" id="contentReview" placeholder="Review">
+        </textarea>
+    </div>
+
+    <input name="author" type="hidden" [(ngModel)]="post.author" class="form-control" id="authorReview" value="">
+    <input name="date" type="hidden" [(ngModel)]="post.date" class="form-control" id="authorDate" value="">
+
+
+    <button type="button" (click)="addPost()" class="btn btn-primary">Ajouter</button>
+</form>
