--- a/client/coolProject/src/app/home/home.component.scss
+++ b/client/coolProject/src/app/home/home.component.scss
@@ -38,6 +38,7 @@
 .jumbotron {
   text-align: center;
   border-bottom: .05rem solid #e5e5e5;
+  background-color: white!important;
 }
 .jumbotron .btn {
   padding: .75rem 1.5rem;
