--- a/client/coolProject/src/app/login/login.component.scss
+++ b/client/coolProject/src/app/login/login.component.scss
@@ -1,4 +1,9 @@
-.form-signin {
+.container_form {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.form-signin, .form-login {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
@@ -7,25 +12,25 @@
   .form-signin .checkbox {
     margin-bottom: 10px;
   }
-  .form-signin .checkbox {
+  .form-signin .checkbox, .form-login .checkbox {
     font-weight: 400;
   }
-  .form-signin .form-control {
+  .form-signin .form-control, .form-login .form-control {
     position: relative;
     box-sizing: border-box;
     height: auto;
     padding: 10px;
     font-size: 16px;
   }
-  .form-signin .form-control:focus {
+  .form-signin .form-control:focus, .form-login .form-control:focus {
     z-index: 2;
   }
-  .form-signin input[type="email"] {
+  .form-signin input[type="email"], .form-login input[type="email"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
-  .form-signin input[type="password"] {
+  .form-signin input[type="password"], .form-login input[type="password"]{
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
